--- a/1-1.html
+++ b/1-1.html
@@ -10,21 +10,45 @@
     <script type="text/javascript" src="osql.js"></script>
 
     <script>
+
+        function button2Pressed() {
+            execSelect2();
+        }
+
+        async function execSelect2() {
+            var userid = document.getElementById('tf1').value;
+            var tweet = document.getElementById('tf2').value;
+
+            var sql = 'insert into Tweets (name, tweet, time) values("%USERID%", "%TWEET%", now());';
+            sql = sql.replace("%USERID%", userid);
+            sql = sql.replace("%TWEET%", tweet);
+            console.log(sql);
+            var objects = await osql.connect(sql);
+            console.log(objects);
+        }
+
         function button1Pressed() {
             execSelect();
         }
 
+        setInterval(button1Pressed,2000)
+
+        
         async function execSelect() {
             var sql = 'select * from Tweets order by time desc limit 20';
             var objects = await osql.connect(sql);
             console.log(objects);
             var html = '';
-            html = html + '<ul>';
+            html = html + '<table border="1">'
             for (var i = 0; i < objects.length; i++) {
                 var object = objects[i];
-                html = html + '<li>' + object.tweet + '</li>';
+                    html = html + '<tr>'
+                    html = html + '<td>'+object.name+'</td>'
+                    html = html + '<td>'+object.tweet+'</td>'
+                    html = html + '<td>'+object.time+'</td>'
+                    html = html + '</tr>'    
             }
-            html = html + '</ul>';
+            html = html + '</table>'
             document.getElementById('result').innerHTML = html;
         }
     </script>
@@ -32,10 +56,21 @@
 </head>
 
 <body>
+
+    <h1>Tweets</h1>
+    <br>
+    ログイン名:<input id="tf1" value="名無し" type="textfield">
+    <br>
+    tweet:<input id="tf2" type="textfield">
+    <button onclick="button2Pressed()">tweet</button>
+    <br>
+
     <h1>Tweets</h1>
     <button onclick="button1Pressed()">X</button>
     <hr>
     <p id="result">xxxx</p>
+
+
 </body>
 
 </html>
