--- a/1-3.html
+++ b/1-3.html
@@ -34,7 +34,7 @@
     <br>
     ログイン名:<input id="tf1" value="名無し" type="textfield">
     <br>
-    tweet:<input id="tf2" type="textfield">
+    Yuka's tweet version:<input id="tf2" type="textfield">
     <button onclick="button1Pressed()">tweet</button>
     <br>
     <p id="result"></p>
