--- a/05/ex5-2.html
+++ b/05/ex5-2.html
@@ -10,8 +10,12 @@
     <script type="text/javascript" src="../osql.js"></script>
 
     <script>
-        function button1Pressed() {
+        function button2Pressed() {
             doInsert();
+        }
+
+        function button1Pressed(){
+            execSelect();
         }
 
         async function doInsert() {
@@ -22,9 +26,26 @@
             var objects = await osql.connect(sql);
             console.log(objects);
 
-            document.getElementById('result').innerHTML = "tweetしました";
             document.getElementById('tf2').value = '';
         }
+
+        async function execSelect() {
+                var sql = 'select * from Tweets order by time desc limit 20';
+                var objects = await osql.connect(sql);
+                console.log(objects);
+                var html = '';
+                html = html + '<table border="1">'
+                for (var i = 0; i < objects.length; i++) {
+                    var object = objects[i];
+                    html = html + '<tr>'
+                    html = html + '<td>' + object.name + '</td>'
+                    html = html + '<td>' + object.tweet + '</td>'
+                    html = html + '<td>' + object.time + '</td>'
+                    html = html + '</tr>'
+                }
+                html = html + '</table>'
+                document.getElementById('result').innerHTML = html;
+            }
     </script>
 
 </head>
@@ -35,9 +56,14 @@
     名前:<input id="tf1" value="名無し" type="textfield">
     <br>
     tweet:<input id="tf2" type="textfield">
-    <button onclick="button1Pressed()">tweet</button>
+    <button onclick="button2Pressed()">tweet</button>
     <br>
-    <p id="result"></p>
+
+    <h1>Tweets</h1>
+    <button onclick="button1Pressed()">X</button>
+    <hr>
+    <p id="result">xxxx</p>
+
 </body>
 
 </html>
