--- a/05/ex5-1.html
+++ b/05/ex5-1.html
@@ -15,19 +15,16 @@
         }
 
         async function doSelect() {
-            var sql = 'select * from Tweets order by time desc limit 20';
+            var sql = "select * from Tweets WHERE Tweet LIKE 'できました'";
             var objects = await osql.connect(sql);
             console.log(objects);
             var html = '';
-            html = html + '<table border="1">'
+            html = html + '<ul>';
             for (var i = 0; i < objects.length; i++) {
                 var object = objects[i];
-                html = html + '<tr>'
-                html = html + '<td>' + object.id + '</td>'
-                html = html + '<td>' + object.name + '</td>'
-                html = html + '</tr>'
+                html = html + '<li>' + object.name +','+object.tweet +','+ object.time + '</li>'
             }
-            html = html + '</table>'
+            html = html + '</ul>';
             document.getElementById('result').innerHTML = html;
         }
     </script>
