--- a/06Userv2/user.html
+++ b/06Userv2/user.html
@@ -41,7 +41,7 @@
                 var object = objects[i];
                 html = html + '<td>' + object.id + '</td>';
                 html = html + '<td>' + object.name + '</td>';
-                html = html + '<td>' + `<button onclick="butto1Pressed('${userid}' , '${object.id}')">フォローする</button>` + '</td>';
+                html = html + '<td>' + `<button onclick="button1Pressed('${userid}' , '${object.id}')">フォローする</button>` + '</td>';
                 html = html + '<td>' + `<button onclick="button2Pressed('${userid}' , '${object.id}')">フォローをやめる</button>` +'</td>';
                 html = html + '</tr>';
             }
